--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,4 +1,4 @@
-/* .overlay {
+.overlay {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -10,7 +10,7 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1200;
-} */
+}
 
 .modal {
   max-width: calc(100vw - 48px);
